--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aman Jain</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <table>
+    <table cellspacing="30">
         <tr>
-            <td><img src="amancircle.png" alt="Aman Profile Picture" width="30%"></td>
+            <td><img src="images/amancircle.png" alt="Aman Profile Picture" style="width: 300px"></td>
             <td>
                 <h1>Aman Jain</h1>
                 <p><em>Student at <strong> Chitkara University</strong></em></p>
@@ -25,7 +26,7 @@
     </ul>
     <hr>
     <h3>Organisation</h3>
-    <table>
+    <table cellspacing="50">
         <thead>
             <tr>
                 <th>Name</th>
